src/modules/my/app/app.css
code {
    font-family: monospace;
    background-color: #FFF;
    vertical-align: middle;
    padding: 0.25rem;
    border-radius: 0.25rem;
    border: 1px solid #DDD;
}

h2 {
    margin: 1rem 0.5rem 0.5rem 0.5rem;
    font-weight: normal;
    font-size: 1.75rem;
}

p {
    margin: 0.5rem;
    line-height: 1.5rem;
}

p:last-of-type {
    margin: 0.5rem 0.5rem 1rem 0.5rem;
}

ul {
    margin: 0;
    padding-left: 0.125rem;
    list-style: none;
}

ul li {
    line-height: 1.5rem;
}

ul li ui-icon {
    vertical-align: middle;
    margin-right: 0.25rem;
    margin-top: -2px;
}

.container {
    max-width: 960px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    padding: 0 1rem 2rem;
}

.mr-2 {
    margin-right: 0.5rem;
}

.mt-5 {
    margin-top: 1.25rem;
}

my-stl {
    margin-bottom: 0.5rem;
}

.flex {
    display: flex;
    flex-direction: row;
}

.flex-item {
    flex: 1;
    margin-bottom: 0.5rem;
}

.flex-item:empty {
    margin-bottom: 0;
}

.flex-spacer {
    width: 0.5rem;
}

.content {
    flex: 3;
    margin-right: 0.5rem;
}

.details {
    flex: 2;
}

@media (max-width: 480px) {
    .flex {
        flex-direction: column;
    }

    .flex-item {
        margin-top: 0.5rem;
    }

    .flex-spacer {
        width: 0;
    }

    .content {
        flex: 1;
        margin-right: 0;
    }

    .details {
        flex: 1;
    }

    .mt-5 {
        margin-top: 0;
    }
}

